fixed all positions and alignments, styled moviecards in a new way #8

--- a/frontend/src/CSS/index.css
+++ b/frontend/src/CSS/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 
-html, body {
+html, body, #root {
     margin: 0;
     padding: 0;
     min-width: 500px;
@@ -13,7 +13,7 @@ html, body {
 }
 
 html {
-    background-color: #40798C;
+    background-color: #EAE7DC;
 }
 
 * {
